--- a/website/main.html
+++ b/website/main.html
@@ -297,13 +297,13 @@
               </div>
           </div>  
           
-          <!--Speed advisory Info-->
+          <!--Speed/Geofence advisory Info-->
           <div id="speed-advisory-info-panel" class="bg-black border-gray" style="display: none;">
             <div class="card text-white bg-black mb-3" style="width: 100%;">
                 <div class="card-header card-custom-header" style="text-align: center;padding-left: 0px;">
                   <button type="button" class="btn btn-info" id="speedAdvisoryInfoInfoCloseBtn">X</button>
                   <div>
-                    Speed Advisory
+                    Geofence Advisory
                   </div> 
                 </div>
                 <div class="card-body" id="geofence-info-content"></div>
@@ -489,8 +489,8 @@
                       Advance
                   </div>
                   <div class="dropdown-menu dropdown-menu-right padding-5" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item padding-10 border-bottom " id="allPlugins-btn" type="button">Change Plugins</a>
-                      <a class="dropdown-item padding-10  " type="button">Change Theme</a>
+                      <a class="dropdown-item padding-10 " id="allPlugins-btn" type="button">Change Plugins</a>
+                      <!-- <a class="dropdown-item padding-10  " type="button">Change Theme</a> -->
                   </div>
               </div>
 
@@ -501,7 +501,7 @@
                 </div>
                 <div id="statistics-dropdown" class="dropdown-menu dropdown-menu-right padding-5" style="display: none;">
                     <a class="dropdown-item padding-10 border-bottom " id="platoon-info-btn" type="button" style="display: none;">Platoon Info</a>
-                    <a class="dropdown-item padding-10 " id="geofence-info-btn" type="button" style="display: none;">Speed Advisory Info</a>
+                    <a class="dropdown-item padding-10 " id="geofence-info-btn" type="button" style="display: none;">Geofence Advisory Info</a>
                 </div>
             </div>
 
