Update statistic and advanced dropdown when no dropdown items available

--- a/website/main.html
+++ b/website/main.html
@@ -488,8 +488,8 @@
                       <i class="fas fa-ellipsis-h"></i><br>
                       Advance
                   </div>
-                  <div class="dropdown-menu dropdown-menu-right padding-5" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item padding-10 " id="allPlugins-btn" type="button">Change Plugins</a>
+                  <div class="advanced-dropdown-menu dropdown-menu dropdown-menu-right padding-5" aria-labelledby="dropdownMenuButton">
+                      <a class="advanced-dropdown-item dropdown-item padding-10 " id="allPlugins-btn" type="button">Change Plugins</a>
                       <!-- <a class="dropdown-item padding-10  " type="button">Change Theme</a> -->
                   </div>
               </div>
@@ -499,9 +499,9 @@
                   <i class="fas fa-chart-line"></i><br>
                     Statistics
                 </div>
-                <div id="statistics-dropdown" class="dropdown-menu dropdown-menu-right padding-5" style="display: none;">
-                    <a class="dropdown-item padding-10 border-bottom " id="platoon-info-btn" type="button" style="display: none;">Platoon Info</a>
-                    <a class="dropdown-item padding-10 " id="geofence-info-btn" type="button" style="display: none;">Geofence Advisory Info</a>
+                <div id="statistics-dropdown" class="statistics-dropdown-menu dropdown-menu dropdown-menu-right padding-5" style="display: none;">
+                    <a class="statistics-dropdown-item dropdown-item padding-10 border-bottom " id="platoon-info-btn" type="button" style="display: none;">Platoon Info</a>
+                    <a class="statistics-dropdown-item dropdown-item padding-10 " id="geofence-info-btn" type="button" style="display: none;">Geofence Advisory Info</a>
                 </div>
             </div>
 
