--- a/website/index.html
+++ b/website/index.html
@@ -47,8 +47,11 @@
     <meta name="theme-color" content="#ffffff">
     <!-- END: favicon -->
 
+    <script src="thirdparty/ros/eventemitter2.min.js"></script>
+    <script src="thirdparty/ros/roslib.min.js"></script>
     <script src = "thirdparty/jquery/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="thirdparty/jqwidgets/jqxcore.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
     <script type="text/javascript" src="thirdparty/jqwidgets/jqxloader.js"></script>
     <script type="text/javascript" src="thirdparty/jqwidgets/jqxbuttons.js"></script>
     <script>
@@ -92,7 +95,12 @@
         Please review the manual for complete system details and further instructions.
         <br /><br />
     </h2>
-    <form action="scripts/launchPlatform.php" method="get">     
+    <form  method="get">  
+            <div style="width: fit-content;margin: 10px auto;">
+                <div id="Carma-connection-fail-alert"  role="alert" style="display: none;color:red" >
+                    <strong>Please wait for ROS to launch and try again.</strong>
+                </div>    
+           </div>     
             <input id="btnOk" type="submit" value="OK"/> <br/> <br/>
             <input type="checkbox" onchange="document.getElementById('rosBagEnabler').disabled = !this.checked;" style="vertical-align: middle" id="cbRemoteLaunch" name="remotelaunch" value="true" checked="checked" class="regular-checkbox big-checkbox" />
             <label for="cbRemoteLaunch"></label>
