--- a/website/index.html
+++ b/website/index.html
@@ -49,6 +49,7 @@
 
     <script src="thirdparty/ros/eventemitter2.min.js"></script>
     <script src="thirdparty/ros/roslib.min.js"></script>
+    <script src="scripts/carma.config.js"></script>
     <script src = "thirdparty/jquery/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="thirdparty/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
