update lane change status images

--- a/website/main.html
+++ b/website/main.html
@@ -33,6 +33,7 @@
         <link rel="stylesheet" type="text/css" href="utils/wifi/wifi.css">
         <link rel="stylesheet" type="text/css" href="utils/cellular/cellular.css">
         <link rel="stylesheet" type="text/css" href="utils/event_info/event_info.css">
+        <link rel="stylesheet" type="text/css" href="utils/lane_change_status/lane_change_status.css">
         <!-- thirdparty js -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r99/three.js"></script> -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r99/three.module.min.js" type="module"></script> -->
@@ -84,6 +85,7 @@
         <script src="utils/active_plugin/active_plugins.js"></script>
         <script src="utils/wifi/wifi.js"></script>
         <script src="utils/cellular/cellular.js"></script>
+        <script src="utils/lane_change_status/lane_change_status.js"></script>
         <!--3D stored js libraries --> 
 
         <!--backend services (2D) -->
@@ -544,9 +546,7 @@
       </div>
 
       <div id="divLaneChangeStatusArea">
-        <div id="divLaneChangeStatusContent" class="border-good"  style="display: none;">
-          <span id = "divLaneChangeStatus" style="display: block;"></span>
-        </div>
+        <div id="divLaneChangeStatusContent" style="display: none;"></div>
       </div>
 
       <!-- 3D init/renders-->
