--- a/website/main.html
+++ b/website/main.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" type="text/css" href="utils/wifi/wifi.css">
         <link rel="stylesheet" type="text/css" href="utils/cellular/cellular.css">
         <link rel="stylesheet" type="text/css" href="utils/event_info/event_info.css">
+        <link rel="stylesheet" type="text/css" href="utils/event_status/event_status.css">
         <link rel="stylesheet" type="text/css" href="utils/lane_change_status/lane_change_status.css">
 
 
@@ -86,6 +87,7 @@
         <script src="utils/wifi/wifi.js"></script>
         <script src="utils/cellular/cellular.js"></script>
         <script src="utils/lane_change_status/lane_change_status.js"></script>
+        <script src="utils/event_status/event_status.js"></script>
         <!--3D stored js libraries --> 
 
         <!--backend services (2D) -->
@@ -536,6 +538,9 @@
 
       <div id="divLaneChangeStatusArea">
         <div id="divLaneChangeStatusContent" style="display: none;"></div>
+      </div>
+      <div id="divEventStatusArea">
+        <div id="divEventStatusContent" style="display: none;"></div>
       </div>
 
       <!-- 3D init/renders-->
