configured vehicle config params to load from yaml file

--- a/website/index.html
+++ b/website/index.html
@@ -22,6 +22,8 @@
     <script src="thirdparty/bootstrap-switch-button-1.1.0/dist/bootstrap-switch-button.min.js"></script>
     <script src="thirdparty/ros/eventemitter2.min.js"></script>
     <script src="thirdparty/ros/roslib.min.js"></script>
+    <script src = "thirdparty/js-yaml/js-yaml.min.js"></script>
+
 
     <!--START: custom css-->
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
