--- a/website/main.html
+++ b/website/main.html
@@ -46,6 +46,7 @@
         <script src = "thirdparty/popper/popper.min.js" ></script>
         <script src = "thirdparty/ros/eventemitter2.min.js"></script>
         <script src = "thirdparty/ros/roslib.min.js"></script>
+        <script src = "thirdparty/js-yaml/js-yaml.min.js"></script>
         <script type = "text/javascript" src="thirdparty/jqwidgets/jqxcore.js"></script>
         <script type = "text/javascript" src="thirdparty/jqwidgets/jqxloader.js"></script>
         <script type = "text/javascript" src="thirdparty/jqwidgets/jqxbuttons.js"></script>
